Avoid horizontal scroll bar
add width: 100% before max-width of container

--- a/plucss.css
+++ b/plucss.css
@@ -709,6 +709,7 @@ img {
 
 .container {
 	margin: 0 auto;
+	width:100%;
 	max-width: 1280px;
 	padding-left: 1rem;
 	padding-right: 1rem;
